--- a/public/enroll.html
+++ b/public/enroll.html
@@ -27,20 +27,20 @@
 
   <body>
     <header class="nav-start">
-      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="story.html">Our Story</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="#">Enroll</a></li>
+          <li><a href="why.html">Why Lyrn</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
+          <li><a class="enroll" href="#">Get Started</a></li>
         </ul>
       </nav>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-      </label>
     </header>
 
     <main>
@@ -71,8 +71,10 @@
             </div>
             <label for="message">Message</label>
             <textarea name="message" id="message"></textarea>
-            <input type="submit" value="Enroll" class="enroll">
+            <input type="submit" value="Submit" class="submit">
           </form>
+          <p>You can also call or text us 1pm to 9pm MDT</p>
+          <a href="tel:+18774001641">(877) 400-1641</a>
         </div>
       </section>
 
@@ -80,25 +82,25 @@
         <h2>Our Courses</h2>
         <div class="course-wrapper">
           <div class="course-block">
-            <a href="#">
-              <div class="course-card blueish">
+            <a href="pricing.html?course=act">
+              <div class="course-card blueish coming-soon">
                 <h2>ACT Prep</h2>
               </div>
             </a>
             <h3>Score your ACT Goal</h3>
-            <p>Sign up to get one on one tutoring from Lyrn's ACT certified tutors. Students recieve a full length ACT preliminary package, which includes the official ACT test,
-              1 hour post test review, and a college readiness conference. Tutors and student will set a goal together and over the course of our custom courses, will use Lyrn's Adaptive Learning 
-              Technology to meet the goal.
+            <p>Sign up to get 1 on 1 tutoring from Lyrn's certified tutors. Our adaptive learning intelligence programs are designed to maxmize the
+              increase your student will see on their test. By being data driven, we can see patterns that no human tutor could do alone without our
+              proprietary algorithms. 
             </p>
           </div>
           <div class="course-block">
-            <a href="#">
+            <a href="pricing.html?course=subjectTutoring">
               <div class="course-card redish">
                 <h2>Subject Tutoring</h2>
               </div>
             </a>
             <h3>Any homework, we can help</h3>
-            <p>Whether you're in a rut and can't seem to get that biology assignment finished or you feel like you're falling behind in math, Lyrn Tutoring can help you finsih your homework feeling
+            <p>Whether you're in a rut and can't seem to get that biology assignment finished or you feel like you're falling behind in math, Lyrn Tutoring can help you finish your homework feeling
               confident. Tutors and students will make goals together and will help the student complete homework until grade or missing assignment goals are met.
             </p>
           </div>
@@ -119,14 +121,15 @@
           <h3>Site Map</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="story.html">About Lyrn</a></li>
-            <li><a href="#">Enrollment</a></li>
-            <li><a href="sign-in.html">Parent Portal</a></li>
-            <li><a href="">Pricing</a></li>
+            <li><a href="why.html">Why Lyrn</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
-        <div>
+        <!-- <div>
           <h3>Social</h3>
           <ul>
             <li><a href="">Instagram</a></li>
@@ -134,17 +137,17 @@
             <li><a href="">LinkedIn</a></li>
             <li><a href="">TikTok</a></li>
           </ul>
-        </div>
+        </div> -->
         <div>
           <h3>Contact Us</h3>
           <ul>
             <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+13857070215">(385) 707-0215</a></li>
+            <li><a href="tel:+18774001641">(877) 400-1641</a></li>
           </ul>
         </div>
       </div>
 
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+      <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
     </footer>
   </body>
 </html>
