--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
           <li><a href="#">Home</a></li>
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
+          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
+          <li><a class="enroll" href="enroll.html">Get Started</a></li>
         </ul>
       </nav>
     </header>
@@ -106,7 +106,7 @@
         <div class="hero__intro">
           <h1>Data-Driven Tutoring</h1>
           <h4>Subject Tutoring and ACT Prep with <a href="why.html">Adaptive Learning Intelligence</a></h4>
-          <div><a class="enroll" href="sign-up.html">Enroll</a></div>
+          <div><a class="enroll" href="enroll.html">Get Started</a></div>
         </div>
         <!-- <div class="hero__body">
             <img src="Images/Lyrn_hero_section_image.png" alt="Adaptive Learning in action">
@@ -120,9 +120,10 @@
             <input type="checkbox" name="about_1" id="about_1" class="about_toggle" checked>
             <label for="about_1" class="summary"><h3>Math is a struggle</h3></label>
             <div class="content">
-              <p>Math is always voted the worst subject in school and we think it's because students aren't getting the help they need to succeed. Enroll in subject tutoring
-                to schedule a lesson as soon as tomorrow. By <a href="sign-up.html">enrolling</a> now, you will access to a personalized dashboard where you can sign up for as many lessons as your
-                students needs all with no contract.
+              <p>Math is always voted the worst subject in school, and we think it's because students aren't 
+                getting the help they need to succeed. Enroll in subject tutoring now to schedule a lesson as 
+                soon as tomorrow! Our specialized tutors have been handpicked for their ability to simplify 
+                difficult and complex concepts.
               </p>
               <a href="pricing.html?course=subjectTutoring">Learn more</a>
               <img src="Images/Lyrn_About_1.png" alt="General Tutoring">
@@ -132,9 +133,10 @@
             <input type="checkbox" name="about_2" id="about_2" class="about_toggle">
             <label for="about_2" class="summary"><h3>Need homework help</h3></label>
             <div class="content">
-              <p>We got you covered! Our professional tutors are outstanding students working towards degrees in the very subjects your student needs help in. They know what it is like to be struggling
-                with classses because they are doing the same thing right now. Get started now by <a href="sign-up.html">enrolling</a> and we can get you scheduled as soon as tomorrow with a qualified 
-                tutor. No contracts, just hop onto your portal at any time to schedule a lesson. 
+              <p>We have you covered! Our professional tutors are outstanding students working towards degrees
+                 in the very subjects your student needs help in. They know what it is like to struggling
+                  with classes because they are doing the same thing right now. Get started now by enrolling
+                   and we will get you scheduled as soon as tomorrow with a qualified tutor.
               </p>
               <a href="pricing.html?course=subjectTutoring">Learn more</a>
               <img src="Images/Lyrn_About_2.png" alt="Math Tutoring Plan">
@@ -144,9 +146,11 @@
             <input type="checkbox" name="about_3" id="about_3" class="about_toggle">
             <label for="about_3" class="summary"><h3>Meet your ACT goals</h3></label>
             <div class="content">
-              <p>Whether you need just a few more points to get into the college of your dreams or want 5+ increase to guarantee scholarships, our adaptive ACT programs are what you have been looking for.
-                We keep track of every question your student is given during our program to truly create a personalized curriculum. Our data-driven approach is leading the way in bringing education into
-                the 21st century. You can <a href="sign-up.html">enroll</a> to get started with a initial consultation before commiting to a program.
+              <p>Whether you need just a few more points to get into the college of your dreams or want a 4+ 
+                increase to guarantee scholarships, our adaptive ACT programs are what you have been looking for! 
+                We track every question your student is given to truly create a personalized curriculum. Our 
+                data-driven approach is leading the way in bringing education into the 21st century. Enroll now 
+                to get started with your own personalized program.
               </p>
               <a href="pricing.html?course=act">Learn more</a>
               <img src="Images/Lyrn_About_3.png" alt="English Tutoring Plan">
@@ -158,9 +162,10 @@
       <section class="method">
         <h5 class="title">The Lyrn Method</h5>
         <h2 class="subtitle">Adaptively Intelligent Courses</h3>
-        <p class="description">Whether you're prepping for an important test, 
-          or just want to get ahead on your homework, 
-          Lyrn can help you ace your subject with a highly unique tutoring plan made just for you.
+        <p class="description">
+          We have completely broken down the ACT into topics, difficulties, frequencies, and by tracking every
+          question your student answers, our adaptive courses will adjust to your student's strengths and weaknesses
+          to maximize results.
         </p>
         <img src="Images/Lyrn_method_section_image.png" alt="Example course load">
       </section>
@@ -249,12 +254,12 @@
         <div class="filter"></div>
         <div class="contact__intro">
           <h2>Next Steps</h2>
-          <h4>You can <a href="sign-up.html">enroll</a> now or if you still have some questions let know us know how we can contact you.
+          <h4>We'll get started on helping you choose the program that will help your student succeed.
           </h4>
         </div>
         <div class="contact-form">
           <h3>Let us contact you</h3>
-          <h5>We will get back to you as soon as we can to answer any question you have about Lyrn</h5>
+          <h5>and we will get back to you as soon as we can</h5>
           <form action="" id="contactForm">
             <label for="name">First and Last Name</label>
             <input type="text" name="name" id="name" required>
@@ -276,7 +281,7 @@
             <textarea name="message" id="message"></textarea>
             <input type="submit" value="Submit">
           </form>
-          <p>or you can give us a call 1pm to 9pm MDT</p>
+          <p>or you can call or text us 1pm to 9pm MDT</p>
           <a href="tel:+18774001641">(877) 400-1641</a>
         </div>
       </section>
@@ -297,12 +302,13 @@
             <li><a href="#">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="sign-up.html">Sign up</a></li>
+            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
             <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
-        <div>
+        <!-- <div>
           <h3>Social</h3>
           <ul>
             <li><a href="">Instagram</a></li>
@@ -310,7 +316,7 @@
             <li><a href="">LinkedIn</a></li>
             <li><a href="">TikTok</a></li>
           </ul>
-        </div>
+        </div> -->
         <div>
           <h3>Contact Us</h3>
           <ul>
@@ -320,6 +326,6 @@
         </div>
       </div>
 
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+      <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
     </footer>
   </body>
