--- a/public/pricing.html
+++ b/public/pricing.html
@@ -15,7 +15,7 @@
 
   <body>
     <header class="nav-start">
-      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
@@ -25,8 +25,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="#">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
+          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
+          <li><a class="enroll" href="enroll.html">Get Started</a></li>
         </ul>
       </nav>
     </header>
@@ -40,7 +40,8 @@
         <h2>Our Courses</h2>
         <div class="course-wrapper">
           <div class="course-block">
-            <div class="course-card blueish" onclick="openCourse('act')">
+            <!-- <div class="course-card blueish" onclick="openCourse('act')"> -->
+              <div class="course-card blueish coming-soon">
               <h2>ACT Prep</h2>
             </div>
             <h3>Score your ACT Goal</h3>
@@ -237,10 +238,10 @@
             <h3>Subject Tutoring</h3>
             <h3 class="price">$50/hr</h3>
           </div>
-          <h4>Personal 1:1 tutoring of your choice of subject or assignment. Instruction, feedback, coaching, reviews, and teaching for any project your student needs.</h4>
+          <h4>Personal 1 on 1 tutoring of your choice of subject or assignment. We have tutors who are expereince in all subjects K-12.</h4>
           <div class="feature-wrapper">
             <ul>
-              <li>Math, Physics, Chemistry, Biology, Stats, English, History, Geography <bold>and more!</bold></li>
+              <li>Math, Physics, Chemistry, Biology, Stats, English, History, Geography <strong>and more!</strong></li>
               <li>Recurring class catchup sessions</li>
               <li>Homework help and coaching</li>
             </ul>
@@ -256,11 +257,11 @@
         <div class="plans">
           <div class="plan-wrapper">
             <div class="select">
-              <h3>Select</h3>
+              <a href="enroll.html"><h3>Select</h3></a>
             </div>
           </div>
         </div>
-        <div class="steps">
+        <!-- <div class="steps">
           <div class="title one">
             <h1>Meet your tutor</h1>
           </div>
@@ -285,7 +286,7 @@
             <h1>Come back when you need</h1>
           </div>
           <p>Schedule a lesson once or set up a recurring meeting. Come back and study with our professional tutors when you need to.</p>
-        </div>
+        </div> -->
       </section>
 
       <section class="topics"></section>
@@ -304,11 +305,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
             <li><a href="#">Pricing</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
+            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
-        <div>
+        <!-- <div>
           <h3>Social</h3>
           <ul>
             <li><a href="">Instagram</a></li>
@@ -316,7 +319,7 @@
             <li><a href="">LinkedIn</a></li>
             <li><a href="">TikTok</a></li>
           </ul>
-        </div>
+        </div> -->
         <div>
           <h3>Contact Us</h3>
           <ul>
@@ -326,6 +329,6 @@
         </div>
       </div>
 
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+      <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
     </footer>
   </body>
