--- a/public/careers.html
+++ b/public/careers.html
@@ -14,20 +14,20 @@
 
   <body>
     <header class="nav-start">
-      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="why.html">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
+          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
+          <li><a class="enroll" href="enroll.html">Get Started</a></li>
         </ul>
       </nav>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-      </label>
     </header>
 
     <main>
@@ -40,33 +40,32 @@
       </section>
 
       <section class="content">
-        <p class="date">January 3, 2022</p>
         <h2>Hiring Tutors</h2>
         <p>At Lyrn, we are dedicated to providing the most advanced tutoring to our students. This cannot be accomplished without dedicated tutors who love teaching as much as they 
           love learning. Our flexible hours make it easy for anyone to join our team and start teaching. We let you completely control your own schedule to fit your chaotic college
           schedule. We offer both subject tutoring for all general subjects and ACT tutoring. Everyone will start off tutoring in the subjects they feel
           the most comfortable in and will recieve training on some if not all of the sections in the ACT.
         </p>
-        <p><strong>Benefits</strong></p>
+        <p class="ul-header"><strong>Benefits</strong></p>
         <ul>
           <li><strong>Competitive Pay</strong> - Starting at $15 an hour plus a 50¢ per hour increase for each section of the ACT you can teach.</li>
-          <li><strong>Flexible Schedule</strong> - You tell us when you can work and we will fill your schedule with lessons.</li>
+          <li><strong>Flexible Schedule</strong> - You tell us when you can work and we will fill your schedule.</li>
           <li><strong>Work as little or as much as you want</strong> - The minimum number of hours you must have avaialable is 5 but the limit is up to you.</li>
           <li><strong>You're in control</strong> - Change your schedule up to the day before.</li>
           <li><strong>Online</strong> - Our entire company started online which means you can work from anywhere.</li>
         </ul>
-        <p><strong>Responsibilities</strong></p>
+        <p class="ul-header"><strong>Responsibilities</strong></p>
         <ul>
           <li><strong>Professional</strong> - You will be the face of Lyrn so proffesionalism is key.</li>
-          <li><strong>Great with kids</strong> - Most of your work will be with high scholl aged kids so being able to communicate well with them is crucial.</li>
-          <li><strong>Knowlegdable</strong> - Must have a strong foundation in what you are teaching. You should be able to  answer the vast majority of questions your
-          students might ask. You don't need to know eveything, but in the topics you are teaching you should know quite a bit.</li>
+          <li><strong>Great with teens</strong> - Most of your work will be with high school aged kids, so being able to communicate well with them is crucial.</li>
+          <li><strong>Knowlegdable</strong> - Must have a strong foundation in what you are teaching. You should be able to answer the vast majority of questions your
+          students might ask. You don't need to know eveything, but in the topics you are teaching, you should know quite a bit.</li>
           <li><strong>Technology</strong> - Since your job is online, we require that you have at device capable of zooming students&mdash;preferably one that has a touch screen
             so that you can draw on your virtual whiteboard.</li>
         </ul>
 
-        <p>So what are you waiting for? Send us an email letting us know you're interested. No resume required. Just let us know what you are currently studying or what you studied
-          in college and if you have any prior tutoring experience. If you still have questions let us know. We're excited for you to join the team.
+        <p>So what are you waiting for? Send us an email with your résume letting us know you're interested. Include in your email what you are currently studying or what you studied
+          in college and if you have any prior tutoring experience. If you still have questions, let us know. We're excited for you to join the team.
         </p>
         <p><a href="mailto:careers@lyrnwithus.com">careers@lyrnwithus.com</a></p>
       </section>
@@ -87,11 +86,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
+            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
+            <li><a href="#">Careers</a></li>
           </ul>
         </div>
-        <div>
+        <!-- <div>
           <h3>Social</h3>
           <ul>
             <li><a href="">Instagram</a></li>
@@ -99,7 +100,7 @@
             <li><a href="">LinkedIn</a></li>
             <li><a href="">TikTok</a></li>
           </ul>
-        </div>
+        </div> -->
         <div>
           <h3>Contact Us</h3>
           <ul>
@@ -109,7 +110,7 @@
         </div>
       </div>
 
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+      <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
     </footer>
   </body>
 </html>
