--- a/public/why.html
+++ b/public/why.html
@@ -14,20 +14,20 @@
 
   <body>
     <header class="nav-start">
-      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Why Lyrn</a></li>
           <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a class="enroll" href="sign-up.html">Enroll</a></li>
+          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
+          <li><a class="enroll" href="enroll.html">Get Started</a></li>
         </ul>
       </nav>
-      <label for="nav-toggle" class="nav-toggle-label">
-        <span></span>
-      </label>
     </header>
 
     <main>
@@ -40,29 +40,30 @@
       </section>
 
       <section class="content">
-        <p class="date">December 13, 2021</p>
+        <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
-        <p>After years of working in the tutoring industry at different companies and privately tutoring, Matthew and I wanted to make something different. For as long as humans have
-          existed there has been one model to mastery: learn, pratice, repeat. We're not changing that. It has worked for thouasands of years so if it's not broke don't fix it. Instead
-          we're adding the special sauce that every modern company has used to bring their industry into the next level - data. Google, Facebook, Amazon. Revolutionaries in their 
+        <p>After years of working in the tutoring industry at various companies and privately tutoring, Matthew and I wanted to make something revolutionary. For as long as humans have
+          existed there has been one model to mastery: learn, practice, repeat. We're not changing that. It has worked for thouasands of years, so if it ain't broke, don't fix it. Instead
+          we're adding the special sauce that every modern company has used to bring their industry to next level - data. Google, Facebook, Amazon. Revolutionaries in their 
           respective fields. How do we bring that same data to education?
         </p>
         <p>
-          <strong>Adaptive Learning Intelligence.</strong> We will keep track of every question your student answers in our programs. Every test they take, every worksheet we work through,
+          <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; Every test they take, every worksheet they complete,
           every lesson we cover will be saved and will affect every step your student takes through our truly custom programs. This is why we have spent thousands of hours developing 
           state-of-the-art software to help your student succeed. The only way to enter the future of education is to use the tools of the future. Our tutors have this technology at 
-          their fingers tips and they are eager to help your student reach their dreams.
+          their fingers tips, and they are eager to help your student reach their dreams.
         </p>
         <div class="quote-card">
           <p>"The only way to enter the future of education is to use the tools of the future."</p>
         </div>
         <p>Your student isn't the only one learning. The best part about having a data-driven curriculum is that it only gets better and better. Our system will learn and improve with
-          every question your student answers. Constant improvement is key to who we are and we want the same from your student.
+          every question your student answers. Constant improvement is key to who we are, and we want the same from your student.
         </p>
         <img src="Images/why-2.jpg" alt="Working together is key.">
         <h2>Advanced yet simple</h2>
-        <p>We want to simplify the process as much as possible. Yes there is some pretty crazy stuff going on under the hood but at the end of the day if your student doesn't understand
-          what they are learning then we failed. We also don't want to forget about the parents who have to navigate the jungle of options before their student can even get the help they need.
+        <p>We want to simplify the process as much as possible. Yes, there is some pretty crazy stuff going on under the hood, but at the end of the day if your student doesn't understand
+          what they are learning then we failed. Figuring out what tyoe of tutoring your students needs is an immmense challenge for parents. This is why we have simplified tutoring to a
+          few programs that are tailored to what your student needs. 
           That is why we focus on these three things:
         </p>
         <ul>
@@ -71,7 +72,7 @@
           <li><strong>Simplicity</strong> - Help ease some stress when you need it the most</li>
         </ul>
         <h2>Our amazing tutors</h2>
-        <p>Our top priority when hiring tutors is their ability to teach. This might sound obvious but a lot of times we see that the knowledge of the tutor is chosen over their ability 
+        <p>Our top priority when hiring tutors is their ability to teach. This might sound obvious, but too often we see that the knowledge of the tutor is chosen over their ability 
           to teach that knowledge. Don't get me wrong, our tutors are completely prepared to answer any question and teach any concept to your students. We choose to focus on the 
           relationship they build with students and how they can best help your student. Every student is unique and needs a unique approach to learning. This is exactly the need that 
           our tutors fill. Our advanced learning intelligence helps our tutors focus less on <strong>what</strong> to teach and more about <strong>how</strong> to teach. 
@@ -80,22 +81,21 @@
           <p>"Every student is unique and needs a unique approach to learning."</p>
         </div>
         <h2>Open and Honest</h2>
-        <p>We commit to being completely transparent about our services and pricing. It's all ready stressful enough when you have a student struggling let alone a company hides what they will do and how much
-          it will cost. We're excited about what we offer so why wouldn't we want to share it? If you have any question about our services please contact us and we will be
+        <p>We commit to being completely transparent about our services and pricing. We're excited about what we offer, so why wouldn't we want to share it? If you have any question about our services, please contact us and we will be
           more than happy to help. Transparency will extend throughout your entire time with us. We want you to know how your student is doing and you don't have to wait until the end of the program
-          to hear about it. We are dedicated to keeping in touch with parents the entire time and be willing to help at any time.  
+          to hear about it. We are dedicated to keeping in touch with parents the entire time and being willing to help at any time.
         </p>
         <p>This is why we don't have any contracts with our programs. If we aren't providing the service you expected then we still want your student to get the help they need which might mean a different tutor 
           or another service. We want to make it as easy as possible so that your student can get the help they need as quickly as possible and being honest is the best way to do that.
         </p>
         <img src="Images/why-3.jpg" alt="Taking careful notes">
         <h2>Sweet and Simple</h2>
-        <p>Our goal is to make the tutoring process as simple as possible. Sign up whenever you need and we would love to fit you in. Being online allows us to make the entire 
-          process seamless. You can sign up right from our websites and see all of your student's lessons all from your personal dashboard. Anything and everything Lyrn can be found there. No worrying about
+        <p>Our goal is to make the tutoring process as simple and effective as possible. Sign up whenever you need and we would love to fit you in. Being online allows us to make the entire 
+          process seamless. Anything and everything, Lyrn can be found there. No worrying about
           working with multiple tutors and having to juggle those meetings. We handle the entire process. Your student's tutor will be ready to work as soon as your student logs in to start the session. 
         </p>
         <h2>Want to know more?</h2>
-        <p>We are here to help so let's get started!
+        <p>We are here to help, so let's get started!
         </p>
         <p>Duncan and Matt</p>
       </section>
@@ -137,11 +137,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Why Lyrn</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="sign-up.html">Sign Up</a></li>
+            <li><a href="enroll.html">Contact Us</a></li>
+            <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
+            <li><a href="careers.html">Careers</a></li>
           </ul>
         </div>
-        <div>
+        <!-- <div>
           <h3>Social</h3>
           <ul>
             <li><a href="">Instagram</a></li>
@@ -149,7 +151,7 @@
             <li><a href="">LinkedIn</a></li>
             <li><a href="">TikTok</a></li>
           </ul>
-        </div>
+        </div> -->
         <div>
           <h3>Contact Us</h3>
           <ul>
@@ -159,7 +161,7 @@
         </div>
       </div>
 
-      <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+      <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
     </footer>
   </body>
 </html>
