--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -346,10 +346,10 @@
       </div>
 
       <div class="flex-row align-center">
-        <button class="button" onclick="goToInquiry()">Inquiry</button>
-        <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
-        <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
+        <!-- <button class="button" onclick="goToInquiry()">Inquiry</button> -->
         <button class="button" onclick="window.location.href='../new-parent.html'">New Parent</button>
+        <button class="button" onclick="window.location.href='../new-student.html'">New Student</button>
+        <button class="button" onclick="window.location.href='../calendar.html'">Calendar</button>
         <button class="button" onclick="window.location.href='../new-tutor.html'">New Tutor</button>
         <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
         <!-- <button class="button" onclick="goToStaffRegistration()">Add Staff</button> -->
