--- a/public/payment.html
+++ b/public/payment.html
@@ -91,6 +91,7 @@
             </div>
             <button type="submit">Charge card</button>
             <button type="button" id="save-card-button">Save card</button>
+            <button type="button" id="payment-link-button">Send Payment Link</button>
             <button type="button" id="delete-card-button" style="display: none;">Delete card</button>
           </form>
         </details>
