--- a/public/pricing.html
+++ b/public/pricing.html
@@ -236,19 +236,19 @@
         <div class="intro-wrapper">
           <div class="title">
             <h3>Subject Tutoring</h3>
-            <h3 class="price">$50/hr</h3>
+            <h3 class="price">$40/hr</h3>
           </div>
-          <h4>Personal 1 on 1 tutoring of your choice of subject or assignment. We have tutors who are expereince in all subjects K-12.</h4>
+          <h4>Personal 1 on 1 tutoring in any subject. No contracts and 30 minute minimum lesson length.</h4>
           <div class="feature-wrapper">
             <ul>
               <li>Math, Physics, Chemistry, Biology, Stats, English, History, Geography <strong>and more!</strong></li>
-              <li>Recurring class catchup sessions</li>
+              <li>Call anytime to set up a lesson</li>
               <li>Homework help and coaching</li>
             </ul>
             <ul>
               <li>Single projects and assignments</li>
               <li>Test Prep</li>
-              <li>Class grade goal setting</li>
+              <li>Lessons whenever you need it</li>
             </ul>
           </div>
           <div class="bottom"></div>
