few more things

--- a/public/new-tutor.html
+++ b/public/new-tutor.html
@@ -49,22 +49,11 @@
     <input type="email" name="email" id="email" required>
     <label for="phoneNumber">Phone Number</label>
     <input type="tel" name="phoneNumber" id="phoneNumber" required>
+    <label for="wage">Wage</label>
+    <input type="num" name="wage" id="wage" required>
     <label for="qualifications">Qualifications</label>
     <div class="loading-wrapper">
       <select name="qualifications" id="qualifications" class="ui dropdown search" multiple>
-        <!-- <option value="" disabled selected>select qualifications</option>
-        <option value="math">Math</option>
-        <option value="physics">Physics</option>
-        <option value="chemistry">Chemistry</option>
-        <option value="biology">Biology</option>
-        <option value="english">English</option>
-        <option value="history">History</option>
-        <option value="spanish">Spanish</option>
-        <option value="french">French</option>
-        <option value="actEnglish">ACT English</option>
-        <option value="actMath">ACT Math</option>
-        <option value="actReading">ACT Reading</option>
-        <option value="actScience">ACT Science</option> -->
       </select>
     </div>
     <p class="error">error message</p>
