--- a/public/payment-link.html
+++ b/public/payment-link.html
@@ -24,8 +24,8 @@
   <script src="Site Templates/generalFunctions.js"></script>
   <script src="payment-link.js" defer></script>
 </head>
-<body>
 
+<body onload="intialSetup()">
   <header>
     <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -47,90 +47,48 @@
     <section class="welcome">
       <h2 class="date">Saturday, Dec 11</h2>
       <h3 id="parent-name">Welcome back</h3>
-      <h3>What would you like to do?</h3>
-      <button>Pay for all of my lessons now</button>
-      <button>Pay for my lessons the night before</button>
-      <button>View my payment history</button>
+      <h4>Here are the lessons that we are paying for today</h4>
     </section>
-    <section class="pay-all"></section>
-    <section class="subscription"></section>
-    <section class="payment-history">
-      <div class="transactions">
-        <h4>Payment History</h4>
-        <div class="table-wrapper">
-          <table id="payments-table">
-            <thead>
-              <tr>
-                <th>DATE</th>
-                <th>STATUS</th>
-                <th>AMOUNT</th>
-                <th>CARD</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-        <div class="balance-wrapper">
-          <h4>Balance:</h4>
-          <h2 id="balance"></h2>
-        </div>
+    <section class="lesson-list">
+      <div class="table-wrapper">
+        <table id="lesson-table">
+          <thead>
+            <tr>
+              <th>LESSON</th>
+              <th>LESSON TIME</th>
+              <th>DURATION</th>
+              <th>PRICE</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <div class="total-wrapper">
+        <h2>Balance Due</h2>
+        <h2 id="balance-due"></h2>
       </div>
     </section>
-
-
-
-    <div class="page-nav">
-      <h1>Payment Portal</h1>
-      <div class="log-out button" onclick="signOut()">Log Out</div>
-    </div>
-    <section class="welcome">
-      <h2 class="date">Saturday, Dec 11</h2>
-      <h3 id="parent-name">Welcome back</h3>
-    </section>
-
     <section class="payments">
-      <h3>Time to make a payment!</h3>
       <div class="make-payment">
-        <h4>Make Payment</h4>
-        <input type="radio" name="payment_method" id="newCard" checked>
-        <label for="newCard">Enter a new credit or debit card</label>
-        <div class="new-card-wrapper">
-          <input type="text" name="cardholder_name" id="cardholderName" placeholder="Cardholder Name">
-          <label for="carholderName"></label>
-          <div id="card-element"></div>
+        <input type="radio" name="paymentType" id="payNow" checked>
+        <label for="payNow">Pay for all of your lessons now</label>
+        <p style="margin: 0em 0em 0em 2em;">OR</p>
+        <input type="radio" name="paymentType" id="paySchedule">
+        <label for="paySchedule">Automatically pay for each lesson the night before</label>
+
+        <input type="text" name="cardholder_name" id="cardholderName" placeholder="Cardholder Name">
+        <label for="carholderName"></label>
+        <div id="card-element"></div>
+        <p id="error-message" class="error"></p>
+
+        <div class="pay-wrapper">
+          <div id="amount" data-type="currency"></div>
+          <div class="pay button" tabindex="0">Pay</div>
+        </div>
+        <div class="save-wrapper">
           <div class="save-card button" tabindex="0">Save Card</div>
         </div>
-        <div class="delete-card button" tabindex="0">Delete Card</div>
-        <div class="pay-wrapper">
-          <p id="error-message" class="error"></p>
-          <input type="text" name="amount" id="amount" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$0.00">
-          <div class="pay button" tabindex="0">Pay</div>
-          <p>All payments are encrypted and secure</p>
-        </div>
-      </div>
-      <div class="transactions">
-        <h4>Payment History</h4>
-        <!-- <p>Payments</p>
-        <ul id="payments-list"></ul>
-        <p>Charges</p>
-        <ul id="charges-list"></ul> -->
-        <div class="table-wrapper">
-          <table id="payments-table">
-            <thead>
-              <tr>
-                <th>DATE</th>
-                <th>STATUS</th>
-                <th>AMOUNT</th>
-                <th>CARD</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-        <div class="balance-wrapper">
-          <h4>Balance:</h4>
-          <h2 id="balance"></h2>
-        </div>
+        <p class="encrypted">All payments are encrypted and secure</p>
       </div>
     </section>
   </main>
@@ -143,35 +101,36 @@
         </div>
       </div>
       <div>
-        <h1>Site Map</h1>
+        <h3>Site Map</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="story.html">About Lyrn</a></li>
-          <li><a href="enroll.html">Enrollment</a></li>
-          <li><a href="#">Parent Portal</a></li>
-          <li><a href="">Pricing</a></li>
+          <li><a href="why.html">Why Lyrn</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="enroll.html">Contact Us</a></li>
+          <!-- <li><a href="sign-up.html">Sign up</a></li> -->
           <li><a href="sign-in.html">Log In</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
       </div>
-      <div>
-        <h1>Social</h1>
+      <!-- <div>
+        <h3>Social</h3>
         <ul>
           <li><a href="">Instagram</a></li>
           <li><a href="">Facebook</a></li>
           <li><a href="">LinkedIn</a></li>
           <li><a href="">TikTok</a></li>
         </ul>
-      </div>
+      </div> -->
       <div>
-        <h1>Contact Us</h1>
+        <h3>Contact Us</h3>
         <ul>
           <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+18774001641">(877) 400-1641</a></li>
+          <li><a href="tel:+18774001641">(877) 400-1641</a></li>
         </ul>
       </div>
     </div>
 
-    <p class="copyright">Copyright © 2021 Advanced Education Solutions LLC. All rights reserved.</p>
+    <p class="copyright">Copyright © 2022 Advanced Education Solutions LLC. All rights reserved.</p>
   </footer>
   
 </body>
