--- a/public/payment.html
+++ b/public/payment.html
@@ -116,8 +116,6 @@
                 <input
                   name="amount"
                   type="number"
-                  min="1"
-                  max="99999999"
                   value=""
                   required
                 />
@@ -141,6 +139,10 @@
       <div>
         <h2>Payments</h2>
         <ul id="payments-list"></ul>
+      </div>
+      <div>
+        <h2>Invoices</h2>
+        <ul id="invoices-list"></ul>
       </div>
       <div>
         <h2>Balance</h2>
