--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Sign in portal for accessing even more Lyrn content">
-  <title>Document</title>
+  <title>Sign In</title>
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
