--- a/public/payment.html
+++ b/public/payment.html
@@ -65,7 +65,7 @@
 
               <!-- amount and such -->
             </div>
-            <div>
+            <!-- <div>
               <label>
                 Amount:
                 <input
@@ -88,8 +88,8 @@
                 Payoff remaining lessons
                 <input type="checkbox" name="payoff" id="payoff">
               </label>
-            </div>
-            <button type="submit">Charge card</button>
+            </div> -->
+            <!-- <button type="submit">Charge card</button> -->
             <button type="button" id="save-card-button">Save card</button>
             <button type="button" id="payment-link-button">Send Payment Link</button>
             <button type="button" id="delete-card-button" style="display: none;">Delete card</button>
