--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                 soon as tomorrow! Our specialized tutors have been handpicked for their ability to simplify 
                 difficult and complex concepts.
               </p>
-              <a href="pricing.html?course=subjectTutoring">Learn more</a>
+              <a href="pricing.html?course=subjectTutoring">Learn more about Subject Tutoring</a>
               <img src="Images/Lyrn_About_1.png" alt="General Tutoring">
             </div>
           </div>
@@ -144,7 +144,7 @@
                   with classes because they are doing the same thing right now. Get started now by enrolling
                    and we will get you scheduled as soon as tomorrow with a qualified tutor.
               </p>
-              <a href="pricing.html?course=subjectTutoring">Learn more</a>
+              <a href="pricing.html?course=subjectTutoring">Learn more about Subject Tutoring</a>
               <img src="Images/Lyrn_About_2.png" alt="Math Tutoring Plan">
             </div>
           </div>
@@ -158,7 +158,7 @@
                 data-driven approach is leading the way in bringing education into the 21st century. Enroll now 
                 to get started with your own personalized program.
               </p>
-              <a href="pricing.html?course=act">Learn more</a>
+              <a href="pricing.html?course=act">Learn more about ACT Prep</a>
               <img src="Images/Lyrn_About_3.png" alt="English Tutoring Plan">
             </div>
           </div>
