--- a/public/pricing.html
+++ b/public/pricing.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Lyrn Tutoring is bringing education into the 21st century with adaptive learning. Data driven success for your student in any class or upcoming test.">
-    <title>Lyrn | Data Driven Tutoring through Adaptive Learning</title>
+    <meta name="description" content="Lyrn pricing is simple and transparent. Select the tutoring that your student needs and contact us to get started.">
+    <title>Pricing</title>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js" defer></script>
 
     <script src="Site Templates/generalFunctions.js" defer></script>
     <script src="pricing.js" defer></script>
@@ -15,7 +18,7 @@
 
   <body>
     <header class="nav-start">
-      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
