--- a/public/why.html
+++ b/public/why.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Why should oyu choose Lyrn over other tutoring comapnies.">
+    <meta name="description" content="Why should you choose Lyrn over other tutoring comapnies.">
     <title>Why Lyrn</title>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js" defer></script>
 
     <script src="why.js" defer></script>
 
@@ -14,7 +17,7 @@
 
   <body>
     <header class="nav-start">
-      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
