github go brrrrr

--- a/public/careers.html
+++ b/public/careers.html
@@ -14,7 +14,7 @@
 
   <body>
     <header class="nav-start">
-      <a href="#" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
+      <a href="index.html" class="logo"><img src="Images/Lyrn_Logo.png" alt="lyrn logo"></a>
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
       </label>
