--- a/public/index.html
+++ b/public/index.html
@@ -312,6 +312,8 @@
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
             <li><a href="sign-in.html">Log In</a></li>
             <li><a href="careers.html">Careers</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="terms.html">Terms and Conditions</a></li>
           </ul>
         </div>
         <!-- <div>
