--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -420,7 +420,7 @@
             </select>
 
             <label for="topic" id='topicLabel'>Topic(s)</label>
-            <select class='ui dropdown search multiple' id="topic" style = 'display:none'>
+            <select class='ui dropdown search multiple' multiple id="topic" style = 'display:none'>
             </select>
 
             <!--<label class='label hidden' for="subTopic" id='subTopicLabel'>SubTopic(s)</label>
@@ -428,7 +428,7 @@
             </select>-->
 
             <label for="modifier" id='modifierLabel'>Modifier(s)</label>
-            <select class='ui dropdown search multiple' id="modifier" style = 'display:none'>
+            <select class='ui dropdown search multiple' multiple id="modifier" style = 'display:none'>
             </select>
 
           </div>
