--- a/public/enroll.html
+++ b/public/enroll.html
@@ -107,7 +107,7 @@
         </div>
       </section>
 
-      <section class="topics"></section>
+      <!-- <section class="topics"></section> -->
     </main>
 
     <footer>
