--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
         <h2>How can we help?</h2>
         <div class="about-details">
           <div class="details">
-            <input type="checkbox" name="about_1" id="about_1" class="about_toggle" checked disabled>
+            <input type="radio" name="about_radio" id="about_1" class="about_toggle" checked>
             <label for="about_1" class="summary"><h3>Math is a struggle</h3></label>
             <div class="content">
               <p>Math is always voted the worst subject in school, and we think it's because students aren't 
@@ -136,7 +136,7 @@
             </div>
           </div>
           <div class="details">
-            <input type="checkbox" name="about_2" id="about_2" class="about_toggle" disabled>
+            <input type="radio" name="about_radio" id="about_2" class="about_toggle">
             <label for="about_2" class="summary"><h3>Need homework help</h3></label>
             <div class="content">
               <p>We have you covered! Our professional tutors are outstanding students working towards degrees
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div class="details">
-            <input type="checkbox" name="about_3" id="about_3" class="about_toggle" disabled>
+            <input type="radio" name="about_radio" id="about_3" class="about_toggle">
             <label for="about_3" class="summary"><h3>Meet your ACT goals</h3></label>
             <div class="content">
               <p>Whether you need just a few more points to get into the college of your dreams or want a 4+ 
@@ -169,7 +169,7 @@
         <h5 class="title">The Lyrn Method</h5>
         <h2 class="subtitle">Adaptively Intelligent Courses</h3>
         <p class="description">
-          We have completely broken down the ACT into topics, difficulties, frequencies, and by tracking every
+          We have completely broken down the ACT so that our programs can be completely customized to your student's needs. By tracking every
           question your student answers, our adaptive courses will adjust to your student's strengths and weaknesses
           to maximize results.
         </p>
@@ -292,7 +292,7 @@
         </div>
       </section>
   
-      <section class="topics"></section>
+      <!-- <section class="topics"></section> -->
     </main>
 
     <footer>
