--- a/public/pricing.html
+++ b/public/pricing.html
@@ -37,7 +37,7 @@
     <main>
       <section class="intro">
         <h1>Simple, easy pricing</h1>
-        <h2>Select the perfect course and see your estimated pricing</h2>
+        <h2>Select the perfect course and see our pricing</h2>
       </section>
       <section class="courses">
         <h2>Our Courses</h2>
@@ -235,13 +235,13 @@
 
       <section class="course-section" id="subjectTutoring">
         <h1>Subject Tutoring</h1>
-        <h2>Tutoring Plan</h2>
+        <h2>Homework Help</h2>
         <div class="intro-wrapper">
           <div class="title">
             <h3>Subject Tutoring</h3>
             <h3 class="price">$40/hr</h3>
           </div>
-          <h4>Personal 1 on 1 tutoring in any subject. No contracts and 30 minute minimum lesson length.</h4>
+          <h4>Personal 1 on 1 tutoring in any subject. No contracts; 30 minute minimum lesson length.</h4>
           <div class="feature-wrapper">
             <ul>
               <li>Math, Physics, Chemistry, Biology, Stats, English, History, Geography <strong>and more!</strong></li>
@@ -249,9 +249,9 @@
               <li>Homework help and coaching</li>
             </ul>
             <ul>
-              <li>Single projects and assignments</li>
+              <li>Class projects and assignments</li>
               <li>Test Prep</li>
-              <li>Lessons whenever you need it</li>
+              <li>Flexible scheduling</li>
             </ul>
           </div>
           <div class="bottom"></div>
@@ -292,7 +292,7 @@
         </div> -->
       </section>
 
-      <section class="topics"></section>
+      <!-- <section class="topics"></section> -->
     </main>
 
     <footer>
