--- a/public/why.html
+++ b/public/why.html
@@ -42,7 +42,25 @@
         </div>
       </section>
 
-      <section class="content">
+      <section class="why">
+        <h2>Why Tutor with Lyrn?</h2>
+        <div class="card-wrapper">
+          <div class="why-card">
+            <h3>Adaptive Learning</h3>
+            <p>We provide a <a href="#content">modern</a> approach to learning.</p>
+          </div>
+          <div class="why-card">
+            <h3>Simple Process</h3>
+            <p> <a href="enroll.html">Get started</a> as soon as tomorrow.</p>
+          </div>
+          <div class="why-card">
+            <h3>Transparent Pricing</h3>
+            <p>Straight forward <a href="pricing.html">pricing</a>. No contracts, no hidden fees.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="content" id="content">
         <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
         <p>After years of working in the tutoring industry at various companies and privately tutoring, Matthew and I wanted to make something revolutionary. For as long as humans have
@@ -51,7 +69,7 @@
           respective fields. How do we bring that same data to education?
         </p>
         <p>
-          <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; Every test they take, every worksheet they complete,
+          <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; every test they take, every worksheet they complete,
           every lesson we cover will be saved and will affect every step your student takes through our truly custom programs. This is why we have spent thousands of hours developing 
           state-of-the-art software to help your student succeed. The only way to enter the future of education is to use the tools of the future. Our tutors have this technology at 
           their fingers tips, and they are eager to help your student reach their dreams.
@@ -65,9 +83,9 @@
         <img src="Images/why-2.jpg" alt="Working together is key.">
         <h2>Advanced yet simple</h2>
         <p>We want to simplify the process as much as possible. Yes, there is some pretty crazy stuff going on under the hood, but at the end of the day if your student doesn't understand
-          what they are learning then we failed. Figuring out what tyoe of tutoring your students needs is an immmense challenge for parents. This is why we have simplified tutoring to a
+          what they are learning then we failed. Figuring out what type of tutoring your students needs is an immense challenge for parents. This is why we have simplified tutoring to a
           few programs that are tailored to what your student needs. 
-          That is why we focus on these three things:
+          We focus on these three things:
         </p>
         <ul>
           <li><strong>Tutors not robots</strong> - A PhD in astrophysics doesn't mean you can explain high school physics.</li>
@@ -76,7 +94,9 @@
         </ul>
         <h2>Our amazing tutors</h2>
         <p>Our top priority when hiring tutors is their ability to teach. This might sound obvious, but too often we see that the knowledge of the tutor is chosen over their ability 
-          to teach that knowledge. Don't get me wrong, our tutors are completely prepared to answer any question and teach any concept to your students. We choose to focus on the 
+          to teach that knowledge. Don't get me wrong, our tutors are completely prepared to answer any question and teach any concept to your students.
+        </p>
+        <p>We choose to focus on the 
           relationship they build with students and how they can best help your student. Every student is unique and needs a unique approach to learning. This is exactly the need that 
           our tutors fill. Our advanced learning intelligence helps our tutors focus less on <strong>what</strong> to teach and more about <strong>how</strong> to teach. 
         </p>
@@ -94,37 +114,16 @@
         <img src="Images/why-3.jpg" alt="Taking careful notes">
         <h2>Sweet and Simple</h2>
         <p>Our goal is to make the tutoring process as simple and effective as possible. Sign up whenever you need and we would love to fit you in. Being online allows us to make the entire 
-          process seamless. Anything and everything, Lyrn can be found there. No worrying about
-          working with multiple tutors and having to juggle those meetings. We handle the entire process. Your student's tutor will be ready to work as soon as your student logs in to start the session. 
+          process seamless. No worrying about
+          working with multiple tutors and having to juggle those meetings. We handle the entire process. Your student's tutor will be ready to help as soon as your student logs in to start the session. 
         </p>
         <h2>Want to know more?</h2>
-        <p>We are here to help, so let's get started!
+        <p>We are here to help, so let's <a href="enroll.html">get started!</a>
         </p>
-        <p>Duncan and Matt</p>
+        <p>Duncan and Matthew</p>
       </section>
 
-      <section class="why">
-        <h2>Why Tutor with Lyrn?</h2>
-        <div class="card-wrapper">
-          <div class="why-card">
-            <img src="Images/Lyrn_About_1.png" alt="">
-            <h3>Adaptive learning</h3>
-            <p>We provide a modern approach to learning</p>
-          </div>
-          <div class="why-card">
-            <img src="Images/Lyrn_About_2.png" alt="">
-            <h3>Focused tutoring</h3>
-            <p>One on one tutoring from our outstanding tutors</p>
-          </div>
-          <div class="why-card">
-            <img src="Images/Lyrn_About_3.png" alt="">
-            <h3>Dedicated effort</h3>
-            <p>We require concerted, dedicated effort from our students inside</p>
-          </div>
-        </div>
-      </section>
-
-      <section class="topics"></section>
+      <!-- <section class="topics"></section> -->
     </main>
 
     <footer>
